2002-01-20  Seth Nickell  <snickell@stanford.edu>

	* main.c: (tell_user_Im_on_crack):

	Mr. Picky Strikes! Remove the separator from
	the dialog as per the HIG.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (create_add_panel_submenu):
	* panel-config.c: (update_config_type), (panel_config):

	Rename "Aligned panel" to "Corner panel".

	Add pixmaps for the menu items under "Create panel->".
	
2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (create_applets_menu), (make_add_submenu),
	(create_root_menu):

	Start collapsing Applet submenu into the "add" submenu. The distinction
	between applets and other "things you can put on the panel" isn't very
	clear and is primarily a technical distinction (particular for objects
	such as the status dock. This looks bigger, but its the amount of data
	many users effectively have to sift through to find what they're looking
	for. Now we can confront the problem of better categorization head on.

2002-01-19  Seth Nickell  <snickell@stanford.edu>

	* gnome-panel-properties.glade:

	Reword "on mouseover" to "when the mouse moves over them". Yeah,
	its longer, but its also a lot more natural (and still not the
	longest string in that dialog ;-)
	
	* menu.c: (create_panel_context_menu):
	* menu.h:
	* panel.c: (panel_menu_get):

	Make the panel right click menu only be a context menu for
	panels rather than a "full" Main menu.

2002-01-17  Padraig O'Briain  <padraig.obriain@sun.com>

	* basep_widget.c: Fill in panel background with prelight color/pixmap 
	when panel has focus. This requires introducing new function
	basep_widget_focus_in_event, base_widget_focus_out_widget,
	basep_widget_set_focus

Thu Jan 17 01:43:20 2002  George Lebl <jirka@5z.com>

	* panel-util.[ch], applet.c, basep-widget.c, drawer.c, logout.c,
	  menu.c: Some renaming of functions and minor cleanup of cruft.

	* panel-applet-frame.c, applet.c, panel.c:  Don't use the 'data'