@@ -1,3 +1,7 @@
+Mon Jan 21 00:50:06 2002  George Lebl <jirka@5z.com>
+
+	* panel.c: use g_filename_from_uri
+
 2002-01-20  Seth Nickell  <snickell@stanford.edu>
 
 	* main.c: (tell_user_Im_on_crack):
